--- a/package.json
+++ b/package.json
@@ -37,5 +37,19 @@
   },
   "scripts": {
     "test": "grunt test"
-  }
+  },
+  "main": "Gruntfile.js",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kswarna/TSP.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kswarna/TSP/issues"
+  },
+  "homepage": "https://github.com/kswarna/TSP"
 }
