--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "type": "git",
     "url": "https://github.com/kswarna/TSP.git"
   },
-  "author": "",
+  "author": "Karthik Swarna",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/kswarna/TSP/issues"
